@@ -2,6 +2,8 @@ package org.molgenis.emx2.graphql;
 
 import static graphql.scalars.ExtendedScalars.GraphQLLong;
 import static org.molgenis.emx2.FilterBean.*;
+import static org.molgenis.emx2.Privileges.*;
+import static org.molgenis.emx2.TableType.ONTOLOGIES;
 import static org.molgenis.emx2.graphql.GraphqlApiFactory.transform;
 import static org.molgenis.emx2.graphql.GraphqlApiMutationResult.Status.SUCCESS;
 import static org.molgenis.emx2.graphql.GraphqlApiMutationResult.typeForMutationResult;
@@ -13,6 +15,7 @@ import graphql.schema.*;
 import java.util.*;
 import java.util.stream.Collectors;
 import org.molgenis.emx2.*;
+import org.molgenis.emx2.utils.TypeUtils;
 
 public class GraphqlTableFieldFactory {
   // static types
@@ -29,19 +32,22 @@ public class GraphqlTableFieldFactory {
           .field(GraphQLFieldDefinition.newFieldDefinition().name("size").type(Scalars.GraphQLInt))
           .field(
               GraphQLFieldDefinition.newFieldDefinition()
+                  .name("filename")
+                  .type(Scalars.GraphQLString))
+          .field(
+              GraphQLFieldDefinition.newFieldDefinition()
                   .name("extension")
                   .type(Scalars.GraphQLString))
           .field(
               GraphQLFieldDefinition.newFieldDefinition().name("url").type(Scalars.GraphQLString))
           .build();
-  final List<String> agg_fields = List.of("max", "min", "sum", "avg");
+  final List<String> agg_fields = List.of("max", "min", SUM_FIELD, "avg");
   private final Schema schema;
 
   // cache so we can reuse types between tables
   private Map<ColumnType, GraphQLInputObjectType> columnFilterInputTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedOutputType> tableTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedOutputType> tableAggTypes = new LinkedHashMap<>();
-  private Map<String, GraphQLNamedOutputType> tableOrderByTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedOutputType> tableGroupByTypes = new LinkedHashMap();
   private Map<String, GraphQLNamedInputType> tableFilterInputTypes = new LinkedHashMap<>();
   private Map<String, GraphQLNamedInputType> tableOrderByInputTypes = new LinkedHashMap<>();
@@ -142,125 +148,148 @@ public class GraphqlTableFieldFactory {
       // build the object
       GraphQLObjectType.Builder tableBuilder = GraphQLObjectType.newObject().name(tableObjectType);
       for (Column col : table.getColumnsWithoutHeadings()) {
-        String id = col.getIdentifier();
-        switch (col.getColumnType().getBaseType()) {
-          case HEADING:
-            // nothing to do
-            break;
-          case FILE:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(fileDownload));
-            break;
-          case BOOL:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLBoolean));
-            break;
-          case BOOL_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLBoolean)));
-            break;
-          case STRING:
-          case TEXT:
-          case LONG:
-          case UUID:
-          case DATE:
-          case DATETIME:
-          case EMAIL:
-          case HYPERLINK:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLString));
-            break;
-          case STRING_ARRAY:
-          case EMAIL_ARRAY:
-          case HYPERLINK_ARRAY:
-          case TEXT_ARRAY:
-          case LONG_ARRAY:
-          case DATE_ARRAY:
-          case DATETIME_ARRAY:
-          case UUID_ARRAY:
-          case JSONB_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLString)));
-            break;
-          case DECIMAL:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLFloat));
-            break;
-          case DECIMAL_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLFloat)));
-            break;
-          case INT:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLInt));
-            break;
-          case INT_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLInt)));
-            break;
-          case REF:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(createTableObjectType(col.getRefTable()))
-                    .argument(
-                        GraphQLArgument.newArgument()
-                            .name(GraphqlConstants.FILTER_ARGUMENT)
-                            .type(getTableFilterInputType(col.getRefTable()))
-                            .build()));
-            break;
-          case REF_ARRAY:
-          case REFBACK:
-            // case MREF:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(createTableObjectType(col.getRefTable())))
-                    .argument(
-                        GraphQLArgument.newArgument()
-                            .name(GraphqlConstants.FILTER_ARGUMENT)
-                            .type(getTableFilterInputType(col.getRefTable()))
-                            .build())
-                    .argument(
-                        GraphQLArgument.newArgument()
-                            .name(GraphqlConstants.LIMIT)
-                            .type(Scalars.GraphQLInt)
-                            .build())
-                    .argument(
-                        GraphQLArgument.newArgument()
-                            .name(GraphqlConstants.OFFSET)
-                            .type(Scalars.GraphQLInt)
-                            .build())
-                    .argument(
-                        GraphQLArgument.newArgument()
-                            .name(GraphqlConstants.ORDERBY)
-                            .type(createTableOrderByInputType(col.getRefTable()))
-                            .build()));
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id + "_agg")
-                    .type(createTableAggregationType(col.getRefTable())));
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id + "_groupBy")
-                    .type(createTableGroupByType(col.getRefTable())));
-            break;
-          default:
-            throw new UnsupportedOperationException(
-                "Not yet implemented type " + col.getColumnType());
-        }
+        createTableField(col, tableBuilder);
       }
       tableTypes.put(tableObjectType, tableBuilder.build());
     }
     return tableTypes.get(tableObjectType);
+  }
+
+  private void createTableField(Column col, GraphQLObjectType.Builder tableBuilder) {
+    String id = col.getIdentifier();
+    TableMetadata table = col.getTable();
+    switch (col.getColumnType().getBaseType()) {
+      case HEADING:
+        // nothing to do
+        break;
+      case FILE:
+        tableBuilder.field(GraphQLFieldDefinition.newFieldDefinition().name(id).type(fileDownload));
+        break;
+      case BOOL:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLBoolean));
+        break;
+      case BOOL_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLBoolean)));
+        break;
+      case STRING:
+      case TEXT:
+      case LONG:
+      case UUID:
+      case DATE:
+      case DATETIME:
+      case PERIOD:
+      case EMAIL:
+      case HYPERLINK:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLString));
+        break;
+      case STRING_ARRAY:
+      case EMAIL_ARRAY:
+      case HYPERLINK_ARRAY:
+      case TEXT_ARRAY:
+      case LONG_ARRAY:
+      case DATE_ARRAY:
+      case DATETIME_ARRAY:
+      case PERIOD_ARRAY:
+      case UUID_ARRAY:
+      case JSONB_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLString)));
+        break;
+      case DECIMAL:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLFloat));
+        break;
+      case DECIMAL_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLFloat)));
+        break;
+      case INT:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLInt));
+        break;
+      case INT_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLInt)));
+        break;
+      case REF:
+        if (hasViewPermission(table)) {
+          tableBuilder.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(id)
+                  .type(createTableObjectType(col.getRefTable()))
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.FILTER_ARGUMENT)
+                          .type(getTableFilterInputType(col.getRefTable()))
+                          .build()));
+        }
+        break;
+      case REF_ARRAY:
+      case REFBACK:
+        if (hasViewPermission(table)) {
+          tableBuilder.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(id)
+                  .type(GraphQLList.list(createTableObjectType(col.getRefTable())))
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.FILTER_ARGUMENT)
+                          .type(getTableFilterInputType(col.getRefTable()))
+                          .build())
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.LIMIT)
+                          .type(Scalars.GraphQLInt)
+                          .build())
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.OFFSET)
+                          .type(Scalars.GraphQLInt)
+                          .build())
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.ORDERBY)
+                          .type(createTableOrderByInputType(col.getRefTable()))
+                          .build()));
+        }
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id + "_agg")
+                .type(createTableAggregationType(col.getRefTable()))
+                .argument(
+                    GraphQLArgument.newArgument()
+                        .name(GraphqlConstants.FILTER_ARGUMENT)
+                        .type(getTableFilterInputType(col.getRefTable()))
+                        .build()));
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id + "_groupBy")
+                .type(GraphQLList.list(createTableGroupByType(col.getRefTable())))
+                .argument(
+                    GraphQLArgument.newArgument()
+                        .name(GraphqlConstants.FILTER_ARGUMENT)
+                        .type(getTableFilterInputType(col.getRefTable()))
+                        .build()));
+        break;
+      default:
+        throw new UnsupportedOperationException("Not yet implemented type " + col.getColumnType());
+    }
+  }
+
+  private boolean hasViewPermission(TableMetadata table) {
+    return table.getTableType().equals(ONTOLOGIES)
+        || schema.getInheritedRolesForActiveUser().contains(VIEWER.toString());
   }
 
   private GraphQLNamedOutputType createTableGroupByType(TableMetadata table) {
@@ -273,13 +302,36 @@ public class GraphqlTableFieldFactory {
           GraphQLObjectType.newObject().name(tableGroupByType);
       groupByBuilder.field(
           GraphQLFieldDefinition.newFieldDefinition().name("count").type(Scalars.GraphQLInt));
+      List<Column> aggCols =
+          table.getColumns().stream()
+              .filter(
+                  c ->
+                      ColumnType.INT.equals(c.getColumnType())
+                          || ColumnType.DECIMAL.equals(c.getColumnType())
+                          || ColumnType.LONG.equals(c.getColumnType()))
+              .toList();
+      if (aggCols.size() > 0) {
+        GraphQLObjectType.Builder sumBuilder =
+            GraphQLObjectType.newObject().name(tableGroupByType + "_" + SUM_FIELD);
+        for (Column aggCol : aggCols) {
+          sumBuilder.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(aggCol.getIdentifier())
+                  .type(graphQLTypeOf(aggCol)));
+        }
+        groupByBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(SUM_FIELD).type(sumBuilder.build()));
+      }
+
       for (Column column : table.getColumns()) {
         // for now only 'ref' types. We might want to have truncating actions for the other types.
-        if (column.isReference()) {
+        if (column.isReference() && (hasViewPermission(table) || column.isOntology())) {
           groupByBuilder.field(
               GraphQLFieldDefinition.newFieldDefinition()
                   .name(column.getIdentifier())
                   .type(createTableObjectType(column.getRefTable())));
+        } else if (!column.isReference() && hasViewPermission(table)) {
+          createTableField(column, groupByBuilder);
         }
       }
       tableGroupByTypes.put(tableGroupByType, groupByBuilder.build());
@@ -289,13 +341,24 @@ public class GraphqlTableFieldFactory {
 
   private GraphQLNamedOutputType createTableAggregationType(TableMetadata table) {
     String tableAggregationType = getTableTypeIdentifier(table) + "Aggregate";
-    if (!tableAggTypes.containsKey(tableAggregationType)) {
-      // put reference in case of self reference
-      tableAggTypes.put(tableAggregationType, GraphQLTypeReference.typeRef(tableAggregationType));
-      // aggregate type
-      GraphQLObjectType.Builder builder = GraphQLObjectType.newObject().name(tableAggregationType);
+
+    if (tableAggTypes.containsKey(tableAggregationType)) {
+      return tableAggTypes.get(tableAggregationType);
+    }
+
+    // put reference in case of self reference
+    tableAggTypes.put(tableAggregationType, GraphQLTypeReference.typeRef(tableAggregationType));
+    // aggregate type
+    GraphQLObjectType.Builder builder = GraphQLObjectType.newObject().name(tableAggregationType);
+    if (schema.hasActiveUserRole(EXISTS) || table.getTableType().equals(ONTOLOGIES)) {
+      builder.field(
+          GraphQLFieldDefinition.newFieldDefinition().name("exists").type(Scalars.GraphQLBoolean));
+    }
+    if (schema.hasActiveUserRole(RANGE) || table.getTableType().equals(ONTOLOGIES)) {
       builder.field(
           GraphQLFieldDefinition.newFieldDefinition().name("count").type(Scalars.GraphQLInt));
+    }
+    if (schema.hasActiveUserRole(VIEWER) || table.getTableType().equals(ONTOLOGIES)) {
       List<Column> aggCols =
           table.getColumns().stream()
               .filter(
@@ -305,7 +368,7 @@ public class GraphqlTableFieldFactory {
                           || ColumnType.LONG.equals(c.getColumnType()))
               .toList();
 
-      if (aggCols.size() > 0) {
+      if (!aggCols.isEmpty()) {
         GraphQLObjectType.Builder max =
             GraphQLObjectType.newObject().name(tableAggregationType + "_max");
         GraphQLObjectType.Builder min =
@@ -338,9 +401,9 @@ public class GraphqlTableFieldFactory {
             .field(GraphQLFieldDefinition.newFieldDefinition().name(AVG_FIELD).type(avg))
             .field(GraphQLFieldDefinition.newFieldDefinition().name(SUM_FIELD).type(sum));
       }
-
-      tableAggTypes.put(tableAggregationType, builder.build());
     }
+    tableAggTypes.put(tableAggregationType, builder.build());
+
     return tableAggTypes.get(tableAggregationType);
   }
 
@@ -446,11 +509,13 @@ public class GraphqlTableFieldFactory {
         return Scalars.GraphQLFloat;
       case DATE,
           DATETIME,
+          PERIOD,
           STRING,
           TEXT,
           UUID,
           DATE_ARRAY,
           DATETIME_ARRAY,
+          PERIOD_ARRAY,
           STRING_ARRAY,
           TEXT_ARRAY,
           EMAIL_ARRAY,
@@ -470,23 +535,28 @@ public class GraphqlTableFieldFactory {
       if (entry.getKey().equals(FILTER_OR) || entry.getKey().equals(FILTER_AND)) {
         List<Map<String, Object>> nested = (List<Map<String, Object>>) entry.getValue();
         List<Filter> nestedFilters =
-            nested.stream()
-                .map(m -> and(convertMapToFilterArray(table, m)))
-                .collect(Collectors.toList());
+            nested.stream().map(m -> and(convertMapToFilterArray(table, m))).toList();
         if (entry.getKey().equals(FILTER_OR)) {
           subFilters.add(or(nestedFilters.toArray(new Filter[nestedFilters.size()])));
         } else {
           subFilters.add(and(nestedFilters.toArray(new Filter[nestedFilters.size()])));
         }
       } else if (entry.getKey().equals(FILTER_SEARCH)) {
-        subFilters.add(f(Operator.TRIGRAM_SEARCH, entry.getValue()));
+        if (entry.getValue() instanceof String && !entry.getValue().toString().trim().equals("")) {
+          subFilters.add(
+              f(
+                  Operator
+                      .TEXT_SEARCH, // might change to trigram search if we learn how to tune for
+                  // short terms
+                  Arrays.stream(entry.getValue().toString().split(" ")).toArray(String[]::new)));
+        }
       } else if (entry.getKey().equals(FILTER_EQUALS)) {
         //  complex filter, should be an list of maps per graphql contract
         if (entry.getValue() != null) {
           subFilters.add(
               or(
                   ((List<Map<String, Object>>) entry.getValue())
-                      .stream().map(v -> createKeyFilter(v)).collect(Collectors.toList())));
+                      .stream().map(v -> createKeyFilter(table, v)).collect(Collectors.toList())));
         }
       } else {
         // find column by escaped name
@@ -494,7 +564,7 @@ public class GraphqlTableFieldFactory {
             table.getColumns().stream()
                 .filter(c -> c.getIdentifier().equals(entry.getKey()))
                 .findFirst();
-        if (!optional.isPresent())
+        if (optional.isEmpty())
           throw new GraphqlException(
               "Graphql API error: Column "
                   + entry.getKey()
@@ -521,13 +591,24 @@ public class GraphqlTableFieldFactory {
     return subFilters.toArray(new FilterBean[subFilters.size()]);
   }
 
-  private static Filter createKeyFilter(Map<String, Object> map) {
+  private static Filter createKeyFilter(TableMetadata table, Map<String, Object> map) {
+    Objects.requireNonNull(table);
+    Objects.requireNonNull(map);
     List<Filter> result = new ArrayList<>();
     for (Map.Entry<String, Object> entry : map.entrySet()) {
+      Optional<Column> column = findColumnById(table, entry.getKey());
+      if (column.isEmpty()) {
+        throw new MolgenisException(
+            "Filter " + entry.getKey() + " unknown in table " + table.getIdentifier());
+      }
       if (entry.getValue() instanceof Map) {
-        result.add(f(entry.getKey(), createKeyFilter((Map<String, Object>) entry.getValue())));
+        result.add(
+            f(
+                column.get().getName(),
+                createKeyFilter(
+                    column.get().getRefTable(), (Map<String, Object>) entry.getValue())));
       } else {
-        result.add(f(entry.getKey(), Operator.EQUALS, entry.getValue()));
+        result.add(f(column.get().getName(), Operator.EQUALS, entry.getValue()));
       }
     }
     return and(result);
@@ -571,7 +652,9 @@ public class GraphqlTableFieldFactory {
                         + (s.getName().endsWith("_agg")
                             ? "_agg"
                             : s.getName().endsWith("_groupBy") ? "_groupBy" : ""),
-                    convertMapSelection(column.get().getRefTable(), s.getSelectionSet()));
+                    convertMapSelection(
+                        column.get().isReference() ? column.get().getRefTable() : null,
+                        s.getSelectionSet()));
             // get limit and offset for the selection
             Map<String, Object> args = s.getArguments();
             if (args.containsKey(GraphqlConstants.FILTER_ARGUMENT)) {
@@ -602,7 +685,7 @@ public class GraphqlTableFieldFactory {
     return result.toArray(new SelectColumn[result.size()]);
   }
 
-  private Optional<Column> findColumnById(TableMetadata aTable, String id) {
+  private static Optional<Column> findColumnById(TableMetadata aTable, String id) {
     if (aTable != null) {
       return aTable.getColumns().stream()
           .filter(
@@ -681,7 +764,7 @@ public class GraphqlTableFieldFactory {
             .type(typeForMutationResult)
             .dataFetcher(fetcher(schema, type));
     for (TableMetadata table : schema.getMetadata().getTables()) {
-      if (table.getColumnsWithoutHeadings().size() > 0) {
+      if (!table.getColumnsWithoutHeadings().isEmpty()) {
         fieldBuilder.argument(
             GraphQLArgument.newArgument()
                 .name(table.getIdentifier())
@@ -739,27 +822,19 @@ public class GraphqlTableFieldFactory {
           int count = 0;
           switch (mutationType) {
             case UPDATE:
-              count =
-                  table.update(
-                      GraphqlApiFactory.convertToRows(table.getMetadata(), rowsAslistOfMaps));
+              count = table.update(TypeUtils.convertToRows(table.getMetadata(), rowsAslistOfMaps));
               result.append("updated " + count + " records to " + tableName + "\n");
               break;
             case INSERT:
-              count =
-                  table.insert(
-                      GraphqlApiFactory.convertToRows(table.getMetadata(), rowsAslistOfMaps));
+              count = table.insert(TypeUtils.convertToRows(table.getMetadata(), rowsAslistOfMaps));
               result.append("inserted " + count + " records to " + tableName + "\n");
               break;
             case SAVE:
-              count =
-                  table.save(
-                      GraphqlApiFactory.convertToRows(table.getMetadata(), rowsAslistOfMaps));
+              count = table.save(TypeUtils.convertToRows(table.getMetadata(), rowsAslistOfMaps));
               result.append("upserted " + count + " records to " + tableName + "\n");
               break;
             case DELETE:
-              count =
-                  table.delete(
-                      GraphqlApiFactory.convertToRows(table.getMetadata(), rowsAslistOfMaps));
+              count = table.delete(TypeUtils.convertToRows(table.getMetadata(), rowsAslistOfMaps));
               result.append("delete " + count + " records from " + tableName + "\n");
               break;
           }
@@ -775,16 +850,16 @@ public class GraphqlTableFieldFactory {
     String rowInputType = getTableTypeIdentifier(table);
     if (rowInputTypes.get(rowInputType) == null) {
       // in case of self reference
-      rowInputTypes.put(rowInputType, GraphQLTypeReference.typeRef(rowInputType));
+      rowInputTypes.put(rowInputType, GraphQLTypeReference.typeRef(rowInputType + INPUT));
       GraphQLInputObjectType.Builder inputBuilder =
           GraphQLInputObjectType.newInputObject().name(rowInputType + INPUT);
       for (Column col : table.getColumnsWithoutHeadings()) {
         GraphQLInputType type;
         if (col.isReference()) {
           if (col.isRef()) {
-            type = getPrimaryKeyInput(col.getRefTable());
+            type = rowInputType(col.getRefTable());
           } else {
-            type = GraphQLList.list(getPrimaryKeyInput(col.getRefTable()));
+            type = GraphQLList.list(rowInputType(col.getRefTable()));
           }
         } else {
           ColumnType columnType = col.getPrimitiveColumnType();
@@ -828,7 +903,7 @@ public class GraphqlTableFieldFactory {
       case INT -> Scalars.GraphQLInt;
       case LONG -> GraphQLLong;
       case DECIMAL -> Scalars.GraphQLFloat;
-      case UUID, STRING, TEXT, DATE, DATETIME -> Scalars.GraphQLString;
+      case UUID, STRING, TEXT, DATE, DATETIME, PERIOD -> Scalars.GraphQLString;
       case BOOL_ARRAY -> GraphQLList.list(Scalars.GraphQLBoolean);
       case INT_ARRAY -> GraphQLList.list(Scalars.GraphQLInt);
       case LONG_ARRAY -> GraphQLList.list(GraphQLLong);
@@ -837,6 +912,7 @@ public class GraphqlTableFieldFactory {
           TEXT_ARRAY,
           DATE_ARRAY,
           DATETIME_ARRAY,
+          PERIOD_ARRAY,
           UUID_ARRAY,
           EMAIL_ARRAY,
           HYPERLINK_ARRAY -> GraphQLList.list(Scalars.GraphQLString);
